# msys2

./: .gitignore  README.md  cite-license.html
chapters/: c_project_vscode.md  compiling_c_code.md  compiling_c_project.md  compiling_cpp_project.md  git.md  installing_vscode.md  msys2.md  msys2_to_path.md  oh_my_zsh.md  vscode_to_path.md  windows_terminal.md  zsh.md
chapters/c_project_vscode/: text.md
chapters/cmake/: text.md
chapters/cmake_tools/: text.md
chapters/compiling_c_code/: text.md
chapters/compiling_c_project/: text.md
chapters/compiling_cpp_project/: text.md
chapters/git/: text.md
chapters/installing_vscode/: text.md
chapters/msys2/: text.md
chapters/msys2_to_path/: text.md
chapters/oh_my_zsh/: text.md
chapters/vscode_to_path/: text.md
chapters/windows_terminal/: text.md
chapters/zsh/: text.md
code/binary_tree/: .gitignore  main.cpp
code/binary_tree/node/: node.cpp  node.hpp
code/binary_tree/tree/: tree.cpp  (+1 more)
code/hello_world/: hello_world.c
code/linked_nodes/: main.c  node.c  node.h
code/my_c_code/: my_c_code.c
code/oriented_graph/: CMakeLists.txt  main.cpp
code/oriented_graph/edge/: CMakeLists.txt  edge.cpp  edge.hpp
code/oriented_graph/graph/: CMakeLists.txt  graph.cpp  graph.hpp
code/oriented_graph/node/: CMakeLists.txt  node.cpp  node.hpp
code/separate_function/: main.c
config/: c_settings.json  c_tasks.json  cmake_settings.json  cmake_snippets.json  cpp_settings.json  cpp_tasks.json  debug_cpp_settings.json  debug_settings.json  initial_debug_tasks.json  initial_settings.json  install_pretty_printer.sh
